<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAC1C5C8"
    android:gravity="right"
    android:orientation="vertical"
    tools:context=".MainActivity2">

    <Button
        android:id="@+id/buttoncancel2"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="right|top"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/ic_baseline_cancel_24" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:text="Survices Rules:"
        android:textColor="#053F5C"
        android:textSize="25dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/rule1"
        android:textColor="#454447"
        android:textSize="18dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="3dp"
        android:layout_marginRight="20dp"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/rule2"
        android:textColor="#454447"
        android:textSize="18dp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="3dp"
        android:layout_marginRight="20dp"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/rule3"
        android:textColor="#454447"
        android:textSize="18dp" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="3dp"
        android:layout_marginRight="20dp"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/rule4"
        android:textColor="#454447"
        android:textSize="18dp" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="3dp"
        android:layout_marginRight="20dp"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/rule5"
        android:textColor="#454447"
        android:textSize="18dp" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="3dp"
        android:layout_marginRight="20dp"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/rule6"
        android:textColor="#454447"
        android:textSize="18dp" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="3dp"
        android:layout_marginRight="20dp"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/rule7"
        android:textColor="#454447"
        android:textSize="18dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginRight="10dp"
        android:background="#053F5C"
        android:text="I agree"
        android:textColor="#FFFFFF"
        android:textSize="15dp" />

</LinearLayout>